Fix using avatars from the gallery and from local files

Summary:
BUG: 385151

Use a KIO::copy job to ensure that ~/.face gets created correctly, and delete any temp files once they're no longer needed.

Test Plan: Tested in KDE Neon. With this change, ~/.face gets created properly, both when it did not previously exist (i.e. when the user is setting a picture for the first time), and also when it did previously exist (i.e. when the user is changing their picture). Tested for gallery avatars as well as several local files (.png, .jpg, .webp).

Reviewers: apol, #plasma, mlaurent, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D8793